# -RDK-X5-

./: .gitignore  LICENSE  README.md  README_CN.md  gen_project_intro.py  slam.md  start_all.sh  start_all_slam.sh  ucar_nodes.service
_archived_tests/usart/: usart.py
_archived_tests/windows_test/: README.md  board_person_detector_node.py  depth_analyzer.py  depth_person_detector.py  fire_detector_standalone.py  requirements.txt  save_depth_frames.py  开发记录_20260706.md
docs/: 视觉监护系统技术文档.md  部署清单.md
qt_monitor/: README.md  TODO_VOICE.md  __init__.py  main.py  mock_bridge.py  qt_monitor.service  ros_bridge.py  run_mock.py  splash.py  start_qt.sh
qt_monitor/styles/: theme.qss
qt_monitor/widgets/: __init__.py  alarm_panel.py  depth_view.py  left_nav.py  log_panel.py  rgb_view.py  slam_view.py  status_bar.py  system_panel.py  voice_chat.py
rplidar_ros-ros/: RPLidar_A2M6_RDK_X5_ROS2_使用指南.md
rplidar_ros-ros/launch/: rplidar_a2m8_launch.py
voice_assistant/: README.md  config.yaml.example  package.xml  requirements_voice.txt  setup.py  voice_assistant.py  voice_assistant_node.py  voice_command.py
voice_assistant/aiui_sdk/: aiui.cfg
voice_assistant/aiui_sdk/assets/vtn/: vtn.ini
voice_assistant/core/: __init__.py  asr_client.py  audio_device.py  audio_player.py  audio_recorder.py  config_manager.py  llm_client.py  semantic_parser.py  tts_client.py
voice_assistant/core/wake_up/: __init__.py  audio_wake.py  serial_wake.py  wake_manager.py
voice_assistant/launch/: voice_assistant.launch.py
voice_assistant/tools/: list_devices.py
web_dashboard/: web_server.py
(+21 files in other folders)
